# Windows-IPA-builder

./: CMakeLists.txt  Info.json  README.md  SupportedDevices.json  fixer.py  fixer.yaml  generate_sources.py
.github/: README.md
.github/workflows/: build-apple-apps.yml  build-current-CMake.yml  change-source-CMakeLists.yml
src/iOS/: CMakeLists.txt  Info.plist
